log
Wed 06 Sep 2023 03:13:53 AM UTC: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
bafeb51
Wed 06 Sep 2023 03:23:48 AM UTC: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|0
b7a6c51
Wed 06 Sep 2023 03:26:57 AM UTC: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
4d7eea1
Wed 06 Sep 2023 03:33:42 AM UTC: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|0
861a2db
Wed 06 Sep 2023 03:34:33 AM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
5d7436a
Wed 06 Sep 2023 03:37:24 AM UTC: 
 hashmap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:92:54: error: expected ‘)’ before ‘{’ token
   92 |     while(!is_equal(key, map->buckets[keyBuscar]->key{
      |                    ~                                 ^
      |                                                      )
hashmap.c:99:36: error: expected ‘)’ before ‘}’ token
   99 |     return map->buckets[keyBuscar];
      |                                    ^
      |                                    )
  100 | }
      | ~                                   
hashmap.c:92:10: note: to match this ‘(’
   92 |     while(!is_equal(key, map->buckets[keyBuscar]->key{
      |          ^
hashmap.c:100:1: error: expected expression before ‘}’ token
  100 | }
      | ^
hashmap.c:100:1: error: control reaches end of non-void function [-Werror=return-type]
  100 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b51a2d1
Wed 06 Sep 2023 03:37:34 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:92:55: error: expected ‘)’ before ‘{’ token
   92 |     while(!is_equal(key, map->buckets[keyBuscar]->key){
      |          ~                                            ^
      |                                                       )
hashmap.c:100:1: error: expected expression before ‘}’ token
  100 | }
      | ^
hashmap.c:100:1: error: control reaches end of non-void function [-Werror=return-type]
  100 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
31276c9
Wed 06 Sep 2023 03:38:08 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
896a57e
Wed 06 Sep 2023 03:41:32 AM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  11|2
total_score: 50/70
9ba4fcb
Wed 06 Sep 2023 03:48:14 AM UTC: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
77e516c
Wed 06 Sep 2023 03:50:08 AM UTC: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  12|2
total_score: 50/70
49b6b8d
Wed 06 Sep 2023 03:56:01 AM UTC: 
 hashmap.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
 tests:  12|2
total_score: 50/70
509afa3
Wed 06 Sep 2023 03:58:20 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
b3e4b71
Wed 06 Sep 2023 04:00:12 AM UTC: 
 hashmap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  12|2
total_score: 50/70
9ac34f7
Wed 06 Sep 2023 04:02:27 AM UTC: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  11|2
total_score: 50/70
6ae39bc
Wed 06 Sep 2023 04:03:15 AM UTC: 
 hashmap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  12|2
total_score: 50/70
ec0596c
Wed 06 Sep 2023 04:05:48 AM UTC: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  11|2
total_score: 50/70
3963fea
Wed 06 Sep 2023 04:07:35 AM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  12|2
total_score: 50/70
801e7d8
Wed 06 Sep 2023 04:10:31 AM UTC: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
03f11e6
Wed 06 Sep 2023 04:11:18 AM UTC: 
 hashmap.c | 11 +++--------
 1 file changed, 3 insertions(+), 8 deletions(-)
 tests:  14|2
total_score: 50/70
7b1bd9b
Wed 06 Sep 2023 04:11:47 AM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  16|1
total_score: 60/70
ae17311
Wed 06 Sep 2023 04:12:49 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a4824ee
Wed 06 Sep 2023 04:13:03 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
47a4aa5
Wed 06 Sep 2023 04:21:02 AM UTC: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:68:28: error: ‘realloc’ called on pointer ‘map’ with nonzero offset 16 [-Werror=free-nonheap-object]
   68 |     map->buckets = (Pair**)realloc(&map->capacity,sizeof(Pair*));
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7fcb019
Wed 06 Sep 2023 04:24:30 AM UTC: 
 hashmap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  0|0
f459236
Wed 06 Sep 2023 04:26:41 AM UTC: 
 hashmap.c | 20 +++++++++++++++++---
 1 file changed, 17 insertions(+), 3 deletions(-)
 tests:  0|0
4cc0f34
Wed 06 Sep 2023 04:28:48 AM UTC: 
 hashmap.c | 10 +++-------
 1 file changed, 3 insertions(+), 7 deletions(-)
 tests:  0|0
e1db2a1
